--- a/index.html
+++ b/index.html
@@ -81,7 +81,18 @@
 			        <li><a href="#">Улсын дээд шүүх</a></li>
 			        <li><a href="#">Шүүх</a></li>
 			        <li><a href="#">Шүүгч</a></li>
-			        <li><a href="#">Мэдээ мэдээлэл</a></li>
+			        <li class="dropdown">
+			          	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Мэдээ мэдээлэл <span class="caret"></span></a>
+			   			<ul class="dropdown-menu" role="menu">
+				            <li><a href="#">Мэдээний төрөл</a></li>
+				            <li><a href="#">Мэдээний төрөл</a></li>
+				            <li><a href="#">Мэдээний төрөл</a></li>
+				            <li class="divider"></li>
+				            <li><a href="#">Мэдээний төрөл</a></li>
+				            <li class="divider"></li>
+				            <li><a href="#">Мэдээний төрөл</a></li>
+			          	</ul>
+			        </li>
 			        <li><a href="#">Тайлан</a></li>
 			        <li><a href="#">Шилэн данс</a></li>
 			        <li><a href="#">Холбоо барих</a></li>
