--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 		<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&amp;subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="assets/css/bootstrap.css" media="all">
+		<link rel="stylesheet" href="assets/css/ekko-lightbox.min.css" media="all">
 		<link rel="stylesheet" href="assets/css/style.css" media="all">
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -46,14 +47,19 @@
 						 	</a>
 						</div>
 						<div class="col-sm-3 hidden-xs pull-right">
-						 	<form>
-						 		<div class="input-group">
-								  <input type="text" class="form-control" placeholder="вэб сайтаас хайх ...">
-								  <span class="input-group-btn">
-								  	<button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-search"></span></button>
-								  </span>
-								</div>
-						 	</form>
+							<script>
+							  (function() {
+							    var cx = '013171371929879870234:ovdiebfoisg';
+							    var gcse = document.createElement('script');
+							    gcse.type = 'text/javascript';
+							    gcse.async = true;
+							    gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+							        '//cse.google.com/cse.js?cx=' + cx;
+							    var s = document.getElementsByTagName('script')[0];
+							    s.parentNode.insertBefore(gcse, s);
+							  })();
+							</script>
+							<gcse:search></gcse:search>
 						</div>
 					</div>
 				</div>
